--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "assignment-1",
+  "name": "interaction-and-physics",
   "version": "1.0.0",
-  "description": "Lecture 2, CSC 495, Fall 2022",
-  "main": ".eslintrc.js",
+  "description": "Interaction and Physics, CSC 495, Fall 2022",
+  "main": "index.ts",
   "dependencies": {
     "@babylonjs/core": "^5.20.0",
     "@babylonjs/inspector": "^5.20.0",
-    "@babylonjs/materials": "^5.20.0"
-  },
+    "@babylonjs/materials": "^5.20.0",
+    "cannon": "^0.6.2",
+    "@types/cannon": "^0.1.4"
+},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
@@ -27,6 +29,6 @@
     "build": "webpack --config webpack.config-prod.js",
     "lint": "npx eslint . --ext .ts,.tsx"
 },
-  "author": "Regis Kopper <kopper@uncg.edu>, heavily based on content from Evan Suma Rosenberg <suma@umn.edu>",
+  "author": "Regis Kopper <kopper@uncg.edu>",
   "license": "CC BY-NC-SA 4.0"
 }
